removed animate.css and fixed spacing due to font size issues (vmax up to lg break point, then rem)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('fonts/horizon/stylesheet.css');
-@import url('fonts/rockstar/stylesheet.css');
 @import url('fonts/scriptyca/stylesheet.css');
 html {
     position: relative;
@@ -18,8 +16,8 @@ body {
 
 #portfolio {
     background: linear-gradient( rgba(33, 33, 33, 1), rgba(52, 58,64, 1) );
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding: 5vh 0 8vh 0;
+    min-height: 100vh;
 }
 
 #contact {
@@ -27,8 +25,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: -72px;
-    padding-top: 50px;
-    padding-bottom: 146px;
+    padding-top: 5vh;
+    min-height: 100vh;
 }
 
 .h100 {
@@ -52,8 +50,14 @@ h1, h2 {
 }
 
 .landing-font-lg {
-    font-size: 7.5vmax;
+    font-size: 7vmax;
     color: white;
+}
+
+@media screen and (min-width: 1200px) {
+    .landing-font-lg {
+        font-size: 7rem;
+    }
 }
 
 .container-fluid {
@@ -93,16 +97,6 @@ p {
 .social-icons > a {
     color: white;
 }
-
-/*.fa-angle-down {
-    color: white;
-    font-size: 3rem;
-    transition: transform 0.6s;
-}
-
-.flip {
-    transform: rotate(-180deg);
-}*/
 
 .card-img-top {
     opacity: 1;
